--- a/style.css
+++ b/style.css
@@ -47,7 +47,11 @@ body {
     display: none !important;
 }
 
-.expense {
+.red-outline:focus {
+    border: 1px solid var(--primary-expenses-color) !important;
+}
+
+.red {
     color: var(--primary-expenses-color) !important;
 }
 
@@ -176,7 +180,9 @@ body {
     border: 1px solid var(--primary-income-color);
 }
 
-.new-item__select {
+.new-item__select.red-outline:focus,
+.new-item__description.red-outline:focus,
+.new-item__value.red-outline:focus .new-item__select {
     padding-left: 0.5rem;
 }
 
@@ -238,7 +244,7 @@ body {
 }
 
 .incomes__title,
-.incomes__expenses {
+.expenses__title {
     font-size: 1.2rem;
     font-family: var(--font-family-lato);
     font-weight: 400;
@@ -249,7 +255,7 @@ body {
     color: var(--primary-income-color);
 }
 
-.incomes__expenses {
+.expenses__title {
     color: var(--primary-expenses-color);
 }
 
@@ -294,7 +300,7 @@ body {
 .income-list__button,
 .expense-list__button {
     width: 10%;
-    margin-right: -20%;
+    margin-right: -10%;
     transition: margin ease-in-out 200ms;
 }
 
